# codex-crew

./: Dockerfile  Makefile  README.md  TODO.md  pyproject.toml
docs/: ARCHITECTURE.md  EXAMPLES_FEATURES.md
src/mcp/: event_bus.py
src/mcp/cli/: app.py
src/mcp/memory/: __init__.py  manager.py
src/mcp/orchestrator/: job_runner.py  planner.py  roles.py  worker.py
src/mcp/store/: __init__.py  sqlite.py
src/mcp/terminal/: manager.py  pool.py  session.py
src/mcp/utils/: __init__.py  resilience.py
src/numerus/: __init__.py  cli.py
